[BUG] Fixed the navbar to align to left.

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@
     position: absolute;
     left: 92%;
     bottom: 15%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .navbarFull {
